# respectscraper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE_HEADER.txt  MANIFEST.in  NOTICE  README.md  config.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  quality.yml  release.yml  test-pypi.yml
examples/: basic_usage.py
tests/: test_basic.py
webscraper/: __init__.py  api_client.py  cli.py  core.py  file_extractor.py  llm_client.py  robots_checker.py  utils.py
